--- a/frontend/src/app/shared/components/accordion/accordion-group.component.html
+++ b/frontend/src/app/shared/components/accordion/accordion-group.component.html
@@ -12,11 +12,11 @@
 
     <!-- staff page: MAIN CONTENT -->
     <div *ngIf="staff" class="row" (click)="toggle.emit()">
-      <div>{{ staff.staffName }}</div>
-      <div>${{ staff.paid }}</div>
-      <div>${{ staff.earned }}</div>
-      <div>{{ staff.projects }}</div>
-      <div>${{ staff.toPay }}</div>
+      <div>{{ staff.profile.staffName }}</div>
+      <div>${{ staff.payment.amtPaid }}</div>
+      <div>{{ staff.payment.projectPercentage }}%</div>
+      <div>{{ staff.profile.projectCount }}</div>
+      <div>${{ staff.payment.amtToBePaid }}</div>
       <!-- <div><img src="../../../../assets/icon/chevron_closed.png"></div> -->
     </div>
 
