--- a/frontend/src/app/pages/setting/setting.page.scss
+++ b/frontend/src/app/pages/setting/setting.page.scss
@@ -7,13 +7,35 @@
     color: saddlebrown;
   }
 
-  .input-field {
-    margin: 0 24px;
-    float: left;
+  p {
+    color: #9f6a2a;
+    margin: 4px 0;
+    font-size: 14px;
+    font-weight: bold;
   }
 
-  .submit-btn{
+  .form-fields {
+    padding-top: 24px;
+    width: 48%;
+    float: left;
+    padding-right: 24px;
+  }
+
+  .submit-btn {
     margin: 55px;
     float: right;
   }
+}
+
+ion-input {
+  height: 50px;
+
+  --padding-start: 24px;
+  font-size: 22px;
+  color: #d1b18b;
+
+  background: linear-gradient(90deg, #fff2d9 -1.28%, #fff9e4 103.08%);
+  box-shadow: inset -7px -5px 8px rgba(255, 255, 255, 0.5),
+    inset 5px 5px 16px rgba(0, 0, 0, 0.08);
+  border-radius: 10px;
 }
