--- a/frontend/src/app/pages/staff/staff.page.scss
+++ b/frontend/src/app/pages/staff/staff.page.scss
@@ -13,21 +13,23 @@
     font-weight: bold;
   }
 
-  .form-field {
+  .form {
+    display: flex;
+    align-items: flex-end;
     padding-top: 24px;
-    width: 48%;
-    float: left;
+  }
+
+  .form-field {
     padding-right: 24px;
   }
 
-  .submit-btn {
-    padding-top: 44px;
-    margin: 0 20px;
+  .grid {
+    display: grid;
+    grid-auto-flow: column;
+    padding-top: 40px;
   }
 
   .header {
-    display: grid;
-    grid-auto-flow: column;
     font-family: Poppins;
     font-weight: 500;
     font-size: 16px;
@@ -35,12 +37,11 @@
     color: #c7a277;
 
     clear: both;
-    padding-top: 20px;
   }
   .scroll-box {
     overflow-y: scroll;
     padding-right: 44px;
-    height: 80vh;
+    height: 60vh;
   }
 }
 
