--- a/frontend/src/app/pages/projects/projects.page.scss
+++ b/frontend/src/app/pages/projects/projects.page.scss
@@ -5,9 +5,13 @@
   h2 {
     color: saddlebrown;
   }
-  .header {
+
+  .grid {
     display: grid;
     grid-auto-flow: column;
+    padding-top: 40px;
+  }
+  .header {
     font-family: Poppins;
     font-weight: 500;
     font-size: 16px;
