--- a/frontend/src/app/shared/layouts/sidebar-left/sidebar-left.component.html
+++ b/frontend/src/app/shared/layouts/sidebar-left/sidebar-left.component.html
@@ -1,6 +1,6 @@
 <div class="sidebar-left">
   <div class="logo">
-    <img src="../../../../assets/logo/logo_BH.png" alt="" />
+    <img src="../../../../assets/logo/logo_BH.png" alt="logo" />
   </div>
 
   <!-- middle buttons -->
@@ -10,13 +10,16 @@
       *ngIf="pageName != 'projects'; else PressedProject"
       (click)="gotofunc('projects')"
     >
-      <app-icon-button [class]="raised" [icon]="projectIcon"></app-icon-button>
+      <app-icon-button
+        [class]="'raised'"
+        [icon]="projectIcon"
+      ></app-icon-button>
     </div>
 
     <ng-template #PressedProject>
-      <div (click)="gotofunc('projects')">
+      <div>
         <app-icon-button
-          [class]="pressed"
+          [class]="'pressed'"
           [icon]="projectIconActive"
         ></app-icon-button>
       </div>
@@ -27,13 +30,13 @@
       *ngIf="pageName != 'staff'; else PressedStaff"
       (click)="gotofunc('staff')"
     >
-      <app-icon-button [class]="raised" [icon]="staffIcon"></app-icon-button>
+      <app-icon-button [class]="'raised'" [icon]="staffIcon"></app-icon-button>
     </div>
 
     <ng-template #PressedStaff>
-      <div (click)="gotofunc('staff')">
+      <div>
         <app-icon-button
-          [class]="pressed"
+          [class]="'pressed'"
           [icon]="staffIconActive"
         ></app-icon-button>
       </div>
@@ -44,13 +47,16 @@
       *ngIf="pageName != 'setting'; else PressedSetting"
       (click)="gotofunc('setting')"
     >
-      <app-icon-button [class]="raised" [icon]="settingIcon"></app-icon-button>
+      <app-icon-button
+        [class]="'raised'"
+        [icon]="settingIcon"
+      ></app-icon-button>
     </div>
 
     <ng-template #PressedSetting>
-      <div (click)="gotofunc('setting')">
+      <div>
         <app-icon-button
-          [class]="pressed"
+          [class]="'pressed'"
           [icon]="settingIconActive"
         ></app-icon-button>
       </div>
@@ -62,15 +68,15 @@
       (click)="gotofunc('add-new-project')"
     >
       <app-icon-button
-        [class]="primaryRaised"
+        [class]="'primary-raised'"
         [icon]="addProjectIcon"
       ></app-icon-button>
     </div>
 
     <ng-template #PressedAddProject>
-      <div (click)="gotofunc('add-new-project')">
+      <div>
         <app-icon-button
-          [class]="primaryPressed"
+          [class]="'primary-pressed'"
           [icon]="addProjectIcon"
         ></app-icon-button>
       </div>
@@ -78,7 +84,7 @@
 
     <!-- logout icon -->
     <div (click)="logout()">
-      <app-icon-button [class]="raised" [icon]="logoutIcon"></app-icon-button>
+      <app-icon-button [class]="'raised'" [icon]="logoutIcon"></app-icon-button>
     </div>
   </div>
 </div>
