--- a/frontend/src/app/pages/staff/staff.page.html
+++ b/frontend/src/app/pages/staff/staff.page.html
@@ -1,4 +1,4 @@
-<ion-content color="primary">
+<ion-content color="primary" *ngIf="staffs">
   <div>
     <app-sidebar-left [pageName]="'staff'"></app-sidebar-left>
   </div>
