--- a/frontend/src/app/pages/projects/projects.page.html
+++ b/frontend/src/app/pages/projects/projects.page.html
@@ -7,11 +7,11 @@
     <h2>PROJECTS</h2>
 
     <div class="header grid">
-      <div>PROJECT NAME</div>
-      <div>DELIVERY DATE</div>
-      <div>EARNING</div>
-      <div>EXPENSE</div>
-      <div>STATUS</div>
+      <div class="col">PROJECT NAME</div>
+      <div class="col">DELIVERY DATE</div>
+      <div class="col">EARNING</div>
+      <div class="col">EXPENSE</div>
+      <div class="col">STATUS</div>
     </div>
     <!-- accordion -->
     <div class="scroll-box">
