--- a/frontend/src/app/pages/staff/staff.page.html
+++ b/frontend/src/app/pages/staff/staff.page.html
@@ -27,11 +27,11 @@
     </form>
 
     <div class="grid header">
-      <div>STAFF NAME</div>
-      <div>PAID</div>
-      <div>PROJECT %</div>
-      <div>PROJECTS</div>
-      <div>TO PAY</div>
+      <div class="col">STAFF NAME</div>
+      <div class="col">PAID</div>
+      <div class="col">PROJECT %</div>
+      <div class="col">PROJECTS</div>
+      <div class="col">TO PAY</div>
     </div>
     <!-- accordion -->
     <div class="scroll-box">
