--- a/frontend/src/app/pages/add-new-project/add-new-project.page.scss
+++ b/frontend/src/app/pages/add-new-project/add-new-project.page.scss
@@ -16,10 +16,13 @@
   }
 
   p {
-    color: #9f6a2a;
     margin: 4px 0;
-    font-size: 14px;
-    font-weight: bold;
+
+    font-family: Poppins;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 27px;
+    color: #c7a277;
   }
 
   .form-fields {
