--- a/frontend/src/app/pages/staff/staff.page.scss
+++ b/frontend/src/app/pages/staff/staff.page.scss
@@ -7,10 +7,13 @@
   }
 
   p {
-    color: #9f6a2a;
     margin: 4px 0;
-    font-size: 14px;
-    font-weight: bold;
+
+    font-family: Poppins;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 27px;
+    color: #c7a277;
   }
 
   .form {
@@ -24,9 +27,12 @@
   }
 
   .grid {
-    display: grid;
-    grid-auto-flow: column;
-    padding-top: 40px;
+    display: flex;
+    padding: 40px 44px 4px 4px;
+
+    .col {
+      width: 20%;
+    }
   }
 
   .header {
