modified status colors

--- a/frontend/src/app/pages/projects/projects.page.html
+++ b/frontend/src/app/pages/projects/projects.page.html
@@ -23,6 +23,7 @@
               <td>STAFF NAME</td>
               <td>AMOUNT</td>
               <td>PAID ON</td>
+              <td>STATUS</td>
             </tr>
             <tr *ngFor="let staff of project.staffs">
               <!-- staff name -->
